socialnetwork/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-network
---
apiVersion: v1
kind: Namespace
metadata:
  name: social-network-backend
